# climb-sensei

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Makefile  PLATFORM_EVOLUTION_PLAN.md  README.md  backend-todo.md  biomechanics-todo.md  codecov.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  run_app.py  sitemap.xml  todo-list.md
.github/workflows/: ci.yaml  docs.yaml  pre-commit.yaml  release.yaml  validate-codecov.yaml
alembic/: env.py
alembic/versions/: 5635c001a8d7_add_route_and_attempt_models.py  a1b2c3d4e5f6_add_error_message_and_indexes.py
api/: index.html
app/: .gitignore  main.py  rate_limit.py  requirements.txt  settings.py  templating.py
app/api/: __init__.py  climbing.py  tracking_quality.py  video_quality.py
app/routers/: api.py  pages.py
app/services/: upload.py
app/static/: manifest.json  style.css  sw.js
app/templates/: attempt_detail.html  base.html  dashboard.html  goals.html  index.html  login.html  profile.html  progress.html  register.html  route_detail.html  routes.html  sessions.html  upload.html
architecture/: index.html
development/: index.html
docs/: PRODUCTION_READINESS.md  api.md  architecture.md  development.md  index.md  installation.md  metrics.md  quickstart.md  usage.md
docs/dev/: DOCS_SETUP.md  TRACKING_QUALITY_FEATURE.md
examples/: analyze_with_tracking.py  backend_api_integration.py  fastapi_server.py  flask_api.py  use_new_services.py
installation/: index.html
metrics/: index.html
quickstart/: index.html
scripts/: README.md  analyze_climb.py  check_video_quality.py  migrate_to_routes.py  process_video.py  process_video_with_metrics.py
search/: search_index.json
src/climb_sensei/: __init__.py  __main__.py  biomechanics.py  (+17 more)
tests/: test_api_endpoints.py  test_attempt_api.py  test_attempt_model.py  test_auth.py  test_backend_improvements.py  test_biomechanics.py  test_biomechanics_fixes.py  test_biomechanics_minor.py  test_compose_frame.py  test_database_models.py  test_e2e.py  test_end_to_end_api.py  test_goal_route.py  test_grades.py  test_hard_metrics.py  test_metrics.py  test_metrics_viz.py  test_patterns.py  test_persistent_storage.py  test_progress_tracking.py  test_route_api.py  test_route_model.py  test_security.py  test_service_architecture.py  test_session_nullable_name.py  test_settings.py  test_smoothing.py  test_tracking_quality.py  test_typed_api.py  test_video_quality.py  test_viz.py
usage/: index.html
(+29 files in other folders)
