[project]
name = "climb-sensei"
version = "0.1.0"
description = "A Python-based computer vision pipeline for extracting vertical movement metrics and joint angles from climbing footage"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climb_sensei"]
