[project]
name = "climb-sensei"
version = "0.1.0"
description = "A Python-based computer vision pipeline for extracting vertical movement metrics and joint angles from climbing footage"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.67.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "httpx-oauth>=0.14.0",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "black>=25.12.0",
    "ruff>=0.6.0",
    "pre-commit>=3.6.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.3",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/climb_sensei"]
